<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="5sp"
        android:scrollbarSize="10sp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

                <EditText
                    android:id="@+id/editTextName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/nameHint"
                    android:inputType="text" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewMobile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mobile"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

                <EditText
                    android:id="@+id/editTextMobile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/mobileHint"
                    android:inputType="phone" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewGroupSize"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/group_size"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

                <EditText
                    android:id="@+id/editTextGroupSize"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="number"
                    android:hint="@string/group_sizeHint" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/date"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>

                <DatePicker
                    android:id="@+id/datePicker"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/time"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

                <TimePicker
                    android:id="@+id/timePicker"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:timePickerMode="spinner" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewArea"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/area"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

                <RadioGroup
                    android:id="@+id/radioGroupSmoking"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/radioButtonSmoking"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/smokingBtn" />

                    <RadioButton
                        android:id="@+id/radioButtonNonSmoking"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/nonSmokingBtn"
                        android:checked="true"/>
                </RadioGroup>

            </LinearLayout>

            <TextView
                android:id="@+id/textViewDisplay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/display"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/buttonReserve"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/reserve_table" />

                <Button
                    android:id="@+id/buttonReset"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/reset" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>